--- a/sourse/pug/blocks/s-catalog-menu/_s-catalog-menu.pug
+++ b/sourse/pug/blocks/s-catalog-menu/_s-catalog-menu.pug
@@ -11,6 +11,8 @@ mixin s-catalog-menu()
 								img.lazy(src="#" data-src=`img/@2x/s-variants-${n}.jpg` , alt="")
 							block
 				+item("Офисные и бухгалтерские","1")
+					+e.DIV.hover-block
+						h3.text-center Офисные и бухгалтерские
 				+item("Взломостойкие","2")
 					+e.DIV.hover-block
 						h3.text-center Взломостойкие
@@ -20,6 +22,8 @@ mixin s-catalog-menu()
 						h3.text-center Огнестойкие
 						p <strong>Огнестойкие</strong> сейфы уберегут содержимое от&nbsp;пожара, но&nbsp;не&nbsp;от&nbsp;взлома. Их&nbsp;стенки изготавливают из&nbsp;материалов с&nbsp;низкой теплопроводностью, например, из&nbsp;алюминиевых пластин толщиной до&nbsp;1,5&nbsp;мм. Пространство между пластинами заполняют пенобетоном.
 				+item("Взломо-огнестойкие","4")
+					+e.DIV.hover-block
+						h3.text-center Взломо-огнестойкие
 				+item("Мебельные","5")
 					+e.DIV.hover-block
 						h3.text-center Мебельные
