--- a/sourse/pug/blocks/s-error/_s-error.pug
+++ b/sourse/pug/blocks/s-error/_s-error.pug
@@ -25,5 +25,8 @@ mixin s-error2()
 					input(type="text" placeholder="Поиск по названию или назначению") 
 					+e.BUTTON.btn(type="button")
 						+icon("search")
-
+				ul
+					li: a(href="#") взломостойкие
+					li: a(href="#") Aiko
+					li: a(href="#") айко
 	// end s-error2
