--- a/sourse/pug/blocks/s-error/_s-error.scss
+++ b/sourse/pug/blocks/s-error/_s-error.scss
@@ -3,7 +3,12 @@
 	.s-error {
 		padding-top: rem(112);
 		&__img-wrap {
+			margin: 0 auto;
 			padding-bottom: rem(77);
+			max-width: rem(544);
+			img{
+				width: 100%;
+			}
 		}
 		h2 {
 			padding-bottom: rem(13);
@@ -21,8 +26,12 @@
 			margin: 0 auto;
 			max-width: rem(626);
 			margin-bottom: rem(42);
+			@include media-breakpoint-down(lg) {
+				display: block !important;
+			}
 			&__btn {
 				color: #0b4392;
+				top: 27%;
 				svg {
 					font-size: rem(22);
 				}
@@ -56,16 +65,41 @@
 	@include media-breakpoint-down(sm) {}
 	@include media-breakpoint-down(xs) {} 
 
+	ul {
+    display: flex;
+    @include roww(5);
+    padding-top: rem(15);
+
+
+    justify-content: center;
+
+    a {
+      text-decoration: none !important;
+      border-bottom: 1px solid;
+      @extend .text-secondary;
+      font-weight: 300;
+      font-size: rem(14);
+
+      &:hover {
+        border-color: transparent;
+      }
+    }
+  }
+
+  li {
+    list-style-type: none;
+
+  }
 } // end.s-error
 
 .not-found {
 	@include media-breakpoint-up(md) {
-		padding-bottom: rem(95);
+		padding-bottom: rem(75);
+	}
+	@include media-breakpoint-down(lg) {
+		padding-top: rem(40);
 	}
 	h4 {
 		padding-bottom: rem(40);
-		@include media-breakpoint-down(md) {
-			padding-bottom: rem(60);
-		}
 	}
 }
