--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -38,7 +38,7 @@ mixin s-form2()
 							+e.label-name Александр Сикерин
 							+e.label-prof руководитель 
 				.col
-					h2 Есть вопросы  по&nbsp;доставке и&nbsp;сборке?
+					h2 Есть вопросы <br>по&nbsp;доставке и&nbsp;сборке?
 					h5 Напишите ваш вопрос
 					+form-wrap("Получить каталог и прайс")
 						textarea
