--- a/sourse/pug/blocks/s-shipping-and-payment/_s-shipping-and-payment.pug
+++ b/sourse/pug/blocks/s-shipping-and-payment/_s-shipping-and-payment.pug
@@ -11,12 +11,12 @@ mixin s-shipping-and-payment()
 					.tabs__wrap.col-lg-9
 						.tabs__content.active
 							+b.cost-time
-								h5 Доставляем сейф на домашний адрес или адрес офиса:
+								p Доставляем сейф на домашний адрес или адрес офиса:
 								ul 
 									li — при покупке до 16:00 час — в этот же день (время согласоваем);
 									li — при покупке после 16:00 час — на следующий день (время согласовываем);
 									li — по согласованию с покупателем в любое другое удобное время.
-								h3 Стоимость доставки
+								p.h3 Стоимость доставки
 								table
 									tr
 										td Доставка по Магнитогорску до места назначения
@@ -29,7 +29,7 @@ mixin s-shipping-and-payment()
 										td 10% от стоимости
 								+e.byer
 									img.lazy(src="#" data-src="img/svg/fire.svg", alt="")
-									h5 Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы
+									p.h5 Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы
 						.tabs__content
 							+b.cost-time
 								h3 Оплачивайте удобным вам способом
