--- a/sourse/pug/blocks/s-step2/_s-step2.pug
+++ b/sourse/pug/blocks/s-step2/_s-step2.pug
@@ -4,11 +4,11 @@ mixin s-step2()
 		.container
 			+b.order-steps.row.text-center
 				.col-sm-4
-					h5 Контактные данные
+					a(href='#') Контактные данные
 				.col-sm-4
-					h5.active Доставка и оплата
+					a.active(href='#') Доставка и оплата
 				.col-sm-4
-					h5 Подтверждение заказа
+					a(href='#') Подтверждение заказа
 			+b.delivery-method.row.justify-content-around
 				.col-md-7
 					h4 Выберите способ доставки
