--- a/sourse/pug/blocks/s-thanks/_s-thanks.pug
+++ b/sourse/pug/blocks/s-thanks/_s-thanks.pug
@@ -19,7 +19,7 @@ mixin s-thanks2()
 					img.lazy.check-mark(src="#" data-src="img/svg/tick.svg", alt="")
 					h2 <span class="name">Иван</span>, мы отправили вам подборку сейфов,<br> подходящих под выбранные параметры.
 					p Скидку&nbsp;10% мы&nbsp;закрепили за&nbsp;вашим номером телефона,<br> она действительна в&nbsp;течение 2-х недель.
-					img.lazy(src="#" data-src="img/@2x/thanks-safes.jpg", alt="")
+					img.lazy.res-i(src="#" data-src="img/@2x/thanks-safes.jpg", alt="")
 					h5 Вы&nbsp;можете в&nbsp;любое время посмотреть сейфы на&nbsp;складе: <br>оценить размеры, попробовать закрыть и&nbsp;открыть замок, задать <br> вопросы&nbsp;&mdash; позвоните и&nbsp;договоритесь о&nbsp;встрече.
 					a(href="tel:+7(3519)22-00-22") +7 (3519) 22-00-22
 	// end s-thanks
