--- a/sourse/pug/pages/05-shipping.pug
+++ b/sourse/pug/pages/05-shipping.pug
@@ -12,7 +12,8 @@ include ../blocks/s-shipping/_s-shipping.pug
 include ../blocks/s-shipping-and-payment/_s-shipping-and-payment.pug
 
 block variables
-	- let  mainPage= null
+	- let  mainPage= 'inner-page'
+	// для отступов у h1
 block title
 	- let  title= 'Доставка и оплата'
 	title= title
