--- a/sourse/pug/blocks/s-contact/_s-contact.scss
+++ b/sourse/pug/blocks/s-contact/_s-contact.scss
@@ -34,30 +34,37 @@
 
 	}
 
-	.messanger-block {
-		box-shadow: 3px 2px 35px rgba(154, 187, 206, 0.17);
+	.ask-questin {
+		box-shadow: rem(3) rem(2) rem(35) rgba(154, 187, 206, 0.17);
 		border-radius: 2px;
-		padding: rem(30);
-		.row{
-		@include roww(0);
+		padding: rem(35);
+		max-width: rem(850);
+		margin: 0 auto;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		align-items: center;
+		@include media-breakpoint-up(xl){
+			padding: rem(37) rem(90) rem(33) rem(100);
 		}
-		@include media-breakpoint-up(lg){
-			padding: rem(37) rem(72) rem(33) rem(83);
-		}
-		margin-bottom: rem(57);
+		margin-bottom: rem(65);
 		&__question{
+			max-width: rem(220);
+			flex-shrink: 0;
 			h4 {
 			line-height: 1.36;
 			letter-spacing: 0.44px;
-			padding-bottom: rem(10);
+			@include media-breakpoint-down(sm) {
+				padding-bottom: rem(10);
+				}	
 			}
 		}
 		&__item {
 			display: inline-block;
-			min-height: rem(60);
+			height: rem(60);
 			display: flex;
 			flex-grow: 1;
-			min-width: rem(180);
+			width: rem(188);
 			align-items: center;
 			justify-content: center;
 			transition: .36s;
@@ -71,10 +78,11 @@
 			}
 			&:hover {
 				border: 1px solid #398bff;
+				border-radius: 2px;
 				text-decoration: none;
 			}
 			&:active {
-				border: 2px solid #0075ff;
+				box-shadow: inset 0 0 0 1px #0075ff
 			}
 			.icon {
 				color: $body-color;
@@ -84,10 +92,27 @@
 				padding-left: rem(7);
 				@extend h5;
 				color: $body-color;
+				margin-bottom: 0;
+
 			}
 			&--viber, &--whatsapp {
 				background-color: transparent;
 				margin: 0;
+				// flex-shrink: 1;
+				@include media-breakpoint-down(sm) {
+					flex-basis: 100%;
+					margin-left: 0;
+					margin-right: 0;
+				}
+			}
+			&--viber {
+				flex-shrink: 0;
+			}
+			&--whatsapp {
+				@include media-breakpoint-up(lg) {
+					margin-right: rem(20);
+					margin-left: rem(40);
+				}
 			}
 			&__question {
 				@include media-breakpoint-up(lg) {
