--- a/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
+++ b/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
@@ -75,7 +75,7 @@ mixin s-prod-head-basket()
 	+b.s-prod-head.s-prod-head-basket&attributes(attributes)
 		.container
 			.row
-				.col-lg-4.col-md-6
+				.col-lg-4.col-md-6#first-mobile-order
 					+b.s-prod-head-images
 						+e.inner
 							+e.slider--lg.--js
@@ -84,7 +84,7 @@ mixin s-prod-head-basket()
 										a(href= src data-fancybox="prod-gal")
 											+img()
 
-				.col-lg-4.col-md-6
+				.col-lg-4.col-md-6#third-mobile-order
 					h1 Сейф Aiko T-17 EL
 					+e.type Взломостойкий
 					p  #[strong Характеристики]
@@ -100,7 +100,7 @@ mixin s-prod-head-basket()
 						+tr("Вес:","7,0 кг")
 						+tr("Объем:","3,0 л")
 						+tr("Взломостойкость:","S1 класс")
-				.col-lg-4
+				.col-lg-4#second-mobile-order
 					+b.s-prod-head-sidebar
 						+e.number
 							button 
