--- a/sourse/pug/blocks/s-prod-head/s-prod-head-basket.scss
+++ b/sourse/pug/blocks/s-prod-head/s-prod-head-basket.scss
@@ -8,15 +8,29 @@
 	h1 {
 		padding-top: rem(5);
 	}
+
+	@include media-breakpoint-down(sm) {
+		#first-mobile-order {
+			order: 1;
+		}
+		#second-mobile-order{
+			order: 2;
+		}
+		#third-mobile-order {
+			order: 3;
+		}
+	}
+
 	.s-prod-head-sidebar {
 		background-color: transparent;
 		display: flex;
 		justify-content: space-between;
+		padding-right: 0;
+		padding-left: 0;
 		@include media-breakpoint-up(md) {
 			padding-top: rem(20);
-			// padding-left: rem(60);
-			padding-right: 0;
 		}
+
 		&__number {
 			display: flex;
 			align-items: flex-start;
@@ -30,6 +44,14 @@
 				// vertical-align: middle;
 				border: 1px solid #e9e9e9;
 				background-color: #fdfdfd;
+				margin-left: rem(7);
+				margin-right: rem(7);
+				&:hover {
+					border: 1px solid #398bff;
+				}
+				&:active, &:focus {
+					border: 2px solid #0075ff;
+				}
 			}
 			button {
 				position: relative;
@@ -37,13 +59,21 @@
 				background-color: transparent;
 				width: rem(40);
 				height: rem(40);
+				border: 1px solid transparent;
+				border-radius: 2px;
+				&:hover {
+					border: 1px solid #398bff;
+				}
+				&:active {
+					border: 2px solid #0075ff;
+				}
 				&::after, &::before {
 					content: '';
 					position: absolute;
 					width: rem(15);
 					height: 1px;
-					left: rem(15);
-					top: rem(20);
+					left: rem(11);
+					top: rem(19);
 					background-color: #626262;
 				}
 				&::before {
@@ -51,14 +81,10 @@
 					// bottom: 0;
 					transform: rotate(90deg);
 				}
-				&::after {
-				}
+
 				&:nth-child(1) {
 					&::before {
 						display: none;
-					}
-					&::after {
-						left: rem(6);
 					}
 				}
 			}
@@ -78,10 +104,8 @@
 				border: 1px solid #e9e9e9;
 				background-color: transparent;
 				position: relative;
-				&:hover {
-					color: #626262;
-					@include mt;
-				}
+				@include mt;
+
 				&::after, &::before {
 					content: '';
 					position: absolute;
@@ -94,6 +118,13 @@
 				}
 				&::before {
 					transform: rotate(135deg);
+				}
+				&:hover {
+					border: 1px solid #398bff;
+
+				}
+				&:active {
+					border: 2px solid #0075ff;
 				}
 			}
 		}
@@ -117,12 +148,17 @@
 			line-height: 1.1;
 			// padding-bottom: rem(10);
 			text-align: right;
+			@include media-breakpoint-down(sm) {
+				text-align: center;
+			}
 		}
 		h3 {
 			font-size: rem(24);
 			font-weight: 700;
 			text-align: right;
-
+			@include media-breakpoint-down(sm) {
+				text-align: center;
+			}
 			letter-spacing: 0.48px;
 		}
 		button {
