--- a/sourse/pug/blocks/s-step1/_s-step1.scss
+++ b/sourse/pug/blocks/s-step1/_s-step1.scss
@@ -7,11 +7,22 @@
 			border: 1px solid #e9e9e9;
 			background-color: #f5f5f5;
 			letter-spacing: 0.44px;
-			color: #a2a2a2;
 			padding: rem(15);
 			padding-bottom: rem(12);
 			margin-bottom: rem(35);
-			
+			a {
+				@extend h4;
+				display: inline-block;
+				color: #a2a2a2;
+				border-bottom: 1px dashed transparent;
+				@include media-breakpoint-down(sm) {
+					padding-top: rem(10);
+				}
+				&:hover {
+					text-decoration: none;
+					border-bottom: 1px dashed $secondary;
+				}
+			}
 			.active {
 				color: $body-color;
 			}
@@ -19,6 +30,9 @@
 		.data {
 			h4 {
 				padding-bottom: rem(30);
+				@include media-breakpoint-down(sm) {
+					text-align: center;
+				}
 			}
 			input {
 				margin-bottom: rem(33);
