--- a/sourse/pug/blocks/s-step3/_s-step3.scss
+++ b/sourse/pug/blocks/s-step3/_s-step3.scss
@@ -1,8 +1,19 @@
 
 	// start .s-step3
 	.s-step3 {
+		padding-top: rem(20);
+		@include media-breakpoint-up (md){
 		padding-top: rem(50);
+		}
 		padding-bottom: rem(48);
+		@include media-breakpoint-down (md) {
+			#mobile-order-1 {
+				order: 1;
+			}
+			#mobile-order-2 {
+				order: 2;
+			}
+		}
 		.order-steps {
 			border: 1px solid #e9e9e9;
 			background-color: #f5f5f5;
@@ -11,7 +22,19 @@
 			padding: rem(15);
 			padding-bottom: rem(12);
 			margin-bottom: rem(35);
-			
+			a {
+				@extend h4;
+				display: inline-block;
+				border-bottom: 1px dashed transparent;
+				color: #a2a2a2;
+				@include media-breakpoint-down(md) {
+					margin-top: rem(10);
+				}
+				&:hover {
+					text-decoration: none;
+					border-bottom: 1px dashed $secondary;
+				}
+			}
 			.active {
 				color: $body-color;
 			}
@@ -21,11 +44,11 @@
 			background-color: #f4f5f7;
 			margin-bottom: rem(30);
 			padding-left: rem(15);
-			padding-top: rem(10);
+			padding-bottom: rem(50);
 			@include media-breakpoint-up(lg) {
+				padding-top: rem(10);
 			// margin-bottom: rem(54);
 			padding-left: rem(44);
-			padding-bottom: rem(50);
 			}
 
 			p {
@@ -36,6 +59,14 @@
 				span {
 					margin-left: rem(5);
 					color: $body-color;
+				}
+				a{
+					color: inherit;
+					border: none;
+					&:hover {
+						text-decoration: none;
+						border: none;
+					}
 				}
 			}
 
@@ -65,15 +96,19 @@
 			}
 		}
 		.you-order {
-			padding: rem(44) rem(23) rem(24);
+			padding: rem(10);
+			@include media-breakpoint-up(md) {
+				padding: rem(44) rem(23) rem(24);
+
+			}
 			display: flex;
 			justify-content: space-between;
 			a {
 				display: inline-block;
 				border-bottom: 1px solid #b9d2f6;
 				color: #0b4290;
-				letter-spacing: 0.36px;
-				line-height: 1.22;
+				letter-spacing: rem(0.36);
+				line-height: 2.2;
 				&:hover {
 					text-decoration: none;
 					border-bottom: 1px dashed #0b4190;
@@ -89,37 +124,51 @@
 			@include media-breakpoint-up(lg) {
 				padding-left: rem(20);
 			}
+			@include media-breakpoint-down(md) {
+				padding-bottom: rem(50);
+			}
 			.img-wrap {
 				position: relative;
-				width: 100%;
+				// max-width: 100%;
 				@include media-breakpoint-up (lg){
 					width: rem(153);
 				}
 				display: inline-block;
 				img {
-					width: 100%;
+					height: auto;
+					max-width: 100%;
 				}
 			}
 
 			&__order-item {
 				// @include roww(30);
-				padding-left: rem(30);
+				@include media-breakpoint-up(md){
+					padding-left: rem(30);
+				}
 			}
 			&__order-description{
 				table {
-					// display: inline-block;
+					@include media-breakpoint-down(sm) {
+						display: block;
+					}
 					width: 100%;
 					@include media-breakpoint-up(lg) {
 						width: 90%;
 					}
 					td{
+						vertical-align: top;
 						font-size: rem(17);
 						// font-family: "Open Sans - Semibold";
 						letter-spacing: 0.34px;
 						line-height: 1.29;
 						font-weight: 700;
 						padding-bottom: rem(10);
-						
+						@include media-breakpoint-down (sm){
+							display: inline;
+							&:nth-child(2){
+								padding-right: rem(95);
+							}
+						}
 						&:nth-last-child(1) {
 							text-align: right;
 						}
@@ -136,16 +185,23 @@
 						line-height: 1.88;
 						display: inline;
 						font-size: 1rem;
-						letter-spacing: 0.32px;
+						padding-top: rem(10);
+						letter-spacing: rem(0.32);
 						font-family: "Open Sans";
 						color: #707070;
+						display: block;
 						font-weight: 400 !important;
+						@include media-breakpoint-down(sm) {
+							padding-bottom: rem(15);
+						}
 					}
 				}
 			}
 			&__final-price {
 				margin-top: rem(40);
-				padding-left: rem(20);
+				@include media-breakpoint-up(md){
+					padding-left: rem(20);
+				}
 					td {
 						font-family: "Open Sans";
 						width: rem(100);
@@ -160,11 +216,16 @@
 			}
 		}
 		.form-wrap {
+			@include media-breakpoint-up(lg){
 			margin-left: rem(20);
+			}
 			&__btn {
 				margin: 0;
 				margin-top: rem(35);
-				max-width: rem(248);
+				max-width: 100%;
+				@include media-breakpoint-up(lg){
+					max-width: rem(248);
+				}
 				min-height: rem(75);
 			}
 		}
