--- a/sourse/pug/blocks/s-error/_s-error.scss
+++ b/sourse/pug/blocks/s-error/_s-error.scss
@@ -22,6 +22,13 @@
 			// padding-top: rem(7);
 			padding-bottom: rem(18);
 		}
+		a {
+			text-decoration: underline;
+			&:hover {
+				color: #398bff;
+				// text-decoration: none;
+			}
+		}
 		.form-search {
 			margin: 0 auto;
 			max-width: rem(626);
@@ -31,7 +38,7 @@
 			}
 			&__btn {
 				color: #0b4392;
-				top: 27%;
+				top: 50%;
 				svg {
 					font-size: rem(22);
 				}
@@ -101,5 +108,10 @@
 	}
 	h4 {
 		padding-bottom: rem(40);
+	}
+	.form-search {
+		&__btn{
+			top: 27%;
+		}
 	}
 }
