--- a/sourse/pug/blocks/s-thanks/_s-thanks.scss
+++ b/sourse/pug/blocks/s-thanks/_s-thanks.scss
@@ -65,6 +65,7 @@
 				font-weight: 400;
 				line-height: 1.5;
 				padding-bottom: rem(43);
+				font-family: "Open Sans";
 			}
 			img {
 				margin-bottom: rem(25);
@@ -73,6 +74,7 @@
 				padding-bottom: rem(6);
 				line-height: 1.5;
 				color: $secondary;
+				font-family: "Open Sans";
 			}
 			a {
 				color: $body-color;
