--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -29,6 +29,10 @@
 	font-size:(24/10)*1rem;
 	width:(24/24)*1em;
 }
+.icon-envelope-shape {
+	font-size:(500/10)*1rem;
+	width:(500/500)*1em;
+}
 .icon-fire {
 	font-size:(500/10)*1rem;
 	width:(500/500)*1em;
@@ -64,6 +68,10 @@
 .icon-telegram {
 	font-size:(24/10)*1rem;
 	width:(24/24)*1em;
+}
+.icon-telephone {
+	font-size:(480.56/10)*1rem;
+	width:(480.56/480.56)*1em;
 }
 .icon-vault {
 	font-size:(500/10)*1rem;
