--- a/sourse/pug/blocks/s-video/_s-video.pug
+++ b/sourse/pug/blocks/s-video/_s-video.pug
@@ -5,10 +5,10 @@ mixin s-video()
 			+e.block(href="https://www.youtube.com/watch?v=en6gms6e54Q&list=PLIU76b8Cjem5B3sufBJ_KFTpKkMEvaTQR"  data-fancybox="video-gal")
 				+e.DIV.inner
 					.row
-						+e.col.col
+						+e.col.col-md-6
 							+e.DIV.title Посмотрите видео
 							p #[strong  и&nbsp;узнайте, как выбрать сейф] для дома&nbsp;&mdash; Александр все подробно рассказал
-						.col
+						.col-md-6
 							+e.DIV.btn
 								+e.DIV.btn-inner
 							+e.DIV.time Время просмотра
