--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -1,3 +1,6 @@
+//- -
+//- 	const json = require('./s-form.json');
+
 mixin s-form()
 	// start s-form
 	+b.s-form.section.block-with-lazy#s-form&attributes(attributes)
